--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,45 @@
-# Dependencies
-node_modules/
-
-# Environment variables
+# node_modules/
+# node_modules
+# ./node_modules
 .env
-
-# Build files
-dist/
-*.tsbuildinfo
+.dist
+# Node.js dependencies
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
 
 # Logs
 logs
 *.log
+logs/
+*.log
 npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+.log
 
-# Editor directories and files
+# Environment variables
+.env
+.env.test
+.env.production
+
+# Build artifacts
+dist/
+build/
+.cache/
+
+# OS-specific files
+.DS_Store
+Thumbs.db
+
+# Editor files
 .vscode/
 .idea/
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-
-# Testing
-coverage/
-
-# macOS
-.DS_Store
+*.swp
